--- a/index.css
+++ b/index.css
@@ -26,7 +26,6 @@ ul.upper {
 }
 
 ul.upper li {
-    border: 1px solid green;
     list-style-type: none;
 }
 .menu
@@ -37,7 +36,6 @@ ul.upper li {
 ul.link_tool
 {
     display:flex;
-    border:1px solid red;
     list-style-type: none;
 }
 
@@ -47,9 +45,8 @@ ul.category
     padding: 0;
     padding-left: 16px;
     display:flex;
-    border:1px solid green;
     list-style-type: none;
-    
+    column-gap:16px;
 }
 
 
@@ -64,7 +61,6 @@ ul.category
 }
 
 .contents-container {
-    background-color: pink;
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     grid-template-rows: repeat(4, minmax(100px, 500px));
@@ -81,7 +77,6 @@ ul.category
 .temp-image {
     width: 100%;
     height: 400px;
-    background-color: orange;
     border: 1px solid red;
 }
 .image-info {
@@ -105,7 +100,6 @@ ul.category
 .category-container
 {
     display:flex; 
-    border:1px solid red;
     padding:0;
     padding-left:16px;
     justify-content: space-between;
@@ -118,7 +112,6 @@ ul.category
     width:66px;
     height:66px;
     border-radius:50px;
-    border:1px solid red;
 }
 
 .category-box
@@ -139,4 +132,23 @@ ul.sorting-by
 ul.sorting-by li
 {
     list-style-type: none;
+}
+
+.cat-desc
+{
+    font-size:13px;
+}
+
+.cat-img img
+{
+    width:100%;
+    height:100%;
+    border-radius: 50px;
+}
+
+.temp-image img
+{
+    object-fit: cover;
+    width:100%;
+    height:100%;
 }
