--- a/index.css
+++ b/index.css
@@ -77,7 +77,6 @@ ul.category
 .temp-image {
     width: 100%;
     height: 400px;
-    border: 1px solid red;
 }
 .image-info {
     border: 1px solid green;
@@ -151,4 +150,5 @@ ul.sorting-by li
     object-fit: cover;
     width:100%;
     height:100%;
+    border-radius:3%;
 }
