--- a/index.css
+++ b/index.css
@@ -72,6 +72,7 @@ ul.category
     height: 500px;
     display: flex;
     flex-direction: column;
+    row-gap: 10px;
 }
 
 .temp-image {
@@ -79,21 +80,29 @@ ul.category
     height: 400px;
 }
 .image-info {
-    border: 1px solid green;
     display: flex;
     width: 100%;
     column-gap: 10px;
 }
 .profile-image {
-    border: 1px solid red;
     width: 26px;
     height: 26px;
     border-radius: 50px;
+    /*border:1px solid red*/
+}
+.profile-image img
+{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    border-radius:50px;
 }
 .title-info {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    column-gap:10px;
+    padding-top:4px;
+    width:100%;
+    justify-content:space-between;
 }
 
 .category-container
@@ -142,6 +151,7 @@ ul.sorting-by li
 {
     width:100%;
     height:100%;
+    object-fit: cover;
     border-radius: 50px;
 }
 
@@ -151,4 +161,9 @@ ul.sorting-by li
     width:100%;
     height:100%;
     border-radius:3%;
+}
+
+@font-face {
+    font-family:pretendard;
+    src: url("/Users/chosungwon/Documents/frontend/kream_clone/font/Pretendard-Regular.otf");
 }
